[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "docx2txt>=0.9",
    "langchain-community>=0.3.27",
    "langchain>=0.3.26",
    "langchain-google-genai>=2.1.7",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "pydantic>=2.11.7",
    "pypdf>=5.7.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.46.1",
    "google-genai>=1.25.0",
    "kaleido>=1.0.0",
    "python-docx>=1.2.0",
    "sift-stack-py>=0.8.3",
    "regex>=2025.7.34",
    "spire-doc>=13.8.0",
]
